[package]
name = "http-manager"
version = "0.0.4" # https://crates.io/crates/http-manager/versions
edition = "2021"
rust-version = "1.65"
publish = true
description = "HTTP manager"
homepage = "https://github.com/gyuho/http-manager"
license = "Apache-2.0"

[dependencies]
hyper = { version = "0.14.23", features = ["full"], optional = false }
hyper-tls = { version = "0.5.0", optional = false }
log = "0.4.17"
reqwest = { version = "0.11.13", optional = false }
tokio = { version = "1.22.0", features = ["full"], optional = false } # ref. https://github.com/tokio-rs/tokio/releases
url = { version = "2.3.1", optional = false }

[dev-dependencies]
env_logger = "0.9.3"
tokio-test = "0.4.2"
